Updated old tests for Stabilization